--- a/HTMLBIRDS.html
+++ b/HTMLBIRDS.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Birds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="CSS_Birdwatching.css">
+    <link rel="stylesheet" href="CSSBirds.css">
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
