--- a/HTMLBIRDS.html
+++ b/HTMLBIRDS.html
@@ -32,7 +32,7 @@
 </header>
   
   
-<main>
+<aside role="complementary">
 <article>
       <h2>Welcome</h2>
 
@@ -40,7 +40,7 @@
 
       <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
   </article>
-  </main>
+  </aside>
       
 <aside role="complementary">
       <h2>Favourite photos</h2>
