--- a/HTMLBIRDS.html
+++ b/HTMLBIRDS.html
@@ -15,7 +15,7 @@
   
 
 <div class="flex-container">
-
+<div class="container">
 <header role="banner">
 <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
@@ -30,8 +30,9 @@
       </ul>
       </nav>
 </header>
-  
-
+  <div>
+    
+<div class="container">
 <main>
 <article>
       <h2>Welcome</h2>
@@ -56,6 +57,7 @@
       <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
       <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
       </aside>
+    </div>
     
 <footer>
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
