--- a/HTMLBIRDS.html
+++ b/HTMLBIRDS.html
@@ -15,7 +15,7 @@
   
 
 <div class="flex-container">
-
+<div class="container">
 <header role="banner">
 <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
@@ -67,6 +67,7 @@
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
      
       </footer>
+   </div>
    </div>
   </body>
     </html>
