--- a/HTMLBIRDS.html
+++ b/HTMLBIRDS.html
@@ -15,7 +15,7 @@
   
 
 <div class="flex-container">
-
+<div class="flex-container">
 <header role="banner">
 <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
@@ -30,8 +30,9 @@
       </ul>
       </nav>
 </header> 
-    
-"div class="flex container">
+  </div>
+  
+"div class="flex-container">
 <main>
 <article>
       <h2>Welcome</h2>
@@ -58,13 +59,14 @@
       </aside>
    </div>   
    
+   <div class="flex container">
 <footer>
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
 
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
      
       </footer>
-   
+   </div>
    </div>
   </body>
     </html>
