--- a/HTMLBIRDS.html
+++ b/HTMLBIRDS.html
@@ -59,7 +59,7 @@
       </aside>
    </div>   
    
-   <div class="flex container">
+   <div class="flex-container">
 <footer>
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
 
