--- a/HTMLBIRDS.html
+++ b/HTMLBIRDS.html
@@ -21,13 +21,13 @@
       <img src="dove.png" alt="a simple dove logo">
 
 <nav>
-      <ul>
+      <ul><strong>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
         <li><a href="#">Photos</a></li>
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
-      </ul>
+        </ul></strong>
       </nav>
 </header> 
   </div>
