--- a/HTMLBIRDS.html
+++ b/HTMLBIRDS.html
@@ -21,13 +21,13 @@
       <img src="dove.png" alt="a simple dove logo">
 
 <nav>
-      <ul><strong>
-        <li><span>Home</span></li>
-        <li><a href="#">Get started</a></li>
-        <li><a href="#">Photos</a></li>
-        <li><a href="#">Gear</a></li>
-        <li><a href="#">Forum</a></li>
-        </ul></strong>
+      <ul>
+        <li><span><strong>Home</strong></span></li>
+        <li><a href="#"><srong>Get started</strong></a></li>
+        <li><a href="#"><strong>Photos</strong></a></li>
+        <li><a href="#"><strong>Gear</strong></a></li>
+        <li><a href="#"><strong>Forum</strong></a></li>
+        </ul>
       </nav>
 </header> 
   </div>
